--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2 # Выполняет push образа в DockerHu
+        uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/test_image:v1
